# amplicontig

./: Cargo.toml  README.md  artic-v3.csv  artic-v4.1.csv
ampliconlib/: Cargo.toml
ampliconlib/src/: aligner.rs  lib.rs  mating.rs  primerset.rs
src/: aligner.rs  fastq.rs  main.rs  mating.rs  primerset.rs
