[package]
name = "amplicontig"
version = "0.7.0"
authors = ["jeff-k <jeff_k@fastmail.com>"]
edition = "2021"

[dependencies]
bio-seq = "0.8"
bio-streams = { git="https://github.com/jeff-k/bio-streams.git" }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
gfa = "0.10"
store-interval-tree = "0.3"
