[package]
name = "amplicontig"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
ampliconlib = { path = "ampliconlib" }
bio-seq = { path = "../bio-seq/bio-seq" }
bio-streams ={ path = "../bio-streams" }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
store-interval-tree = "0.4"
cbgb = { path = "../cbgb" }
